--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charterrorbarsdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charterrorbarsdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData:interface'
-    summary: <span data-ttu-id="bec36-101">描述通过调用返回的数据的接口`chartErrorBars.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="bec36-101">An interface describing the data returned by calling `chartErrorBars.toJSON()`</span></span><!-- --><span data-ttu-id="bec36-102">.</span><span class="sxs-lookup"><span data-stu-id="bec36-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartErrorBars.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartErrorBarsData
     fullName: Excel.Interfaces.ChartErrorBarsData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.ChartErrorBarsData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData#endStyleCap:member'
     summary: |-
-      <span data-ttu-id="bec36-103">指定误差线是否具有终止端样式。</span><span class="sxs-lookup"><span data-stu-id="bec36-103">Specifies whether or not the error bars have an end style cap.</span></span>
+      指定误差线是否具有最终样式帽。
 
-      <span data-ttu-id="bec36-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bec36-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endStyleCap
     fullName: endStyleCap
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData#format:member'
     summary: |-
-      <span data-ttu-id="bec36-105">指定误差线的格式类型。</span><span class="sxs-lookup"><span data-stu-id="bec36-105">Specifies the formatting type of the error bars.</span></span>
+      指定误差线的格式类型。
 
-      <span data-ttu-id="bec36-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bec36-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -46,9 +46,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData#include:member'
     summary: |-
-      <span data-ttu-id="bec36-107">指定包含误差线的哪些部分。</span><span class="sxs-lookup"><span data-stu-id="bec36-107">Specifies which parts of the error bars to include.</span></span>
+      指定包含误差线的哪些部分。
 
-      <span data-ttu-id="bec36-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bec36-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: include
     fullName: include
     langs:
@@ -61,9 +61,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsData#include~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData#type:member'
     summary: |-
-      <span data-ttu-id="bec36-109">误差线标记的区域类型。</span><span class="sxs-lookup"><span data-stu-id="bec36-109">The type of range marked by the error bars.</span></span>
+      误差线标记的区域类型。
 
-      <span data-ttu-id="bec36-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bec36-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -76,9 +76,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsData#visible:member'
     summary: |-
-      <span data-ttu-id="bec36-111">指定是否显示误差线。</span><span class="sxs-lookup"><span data-stu-id="bec36-111">Specifies whether or not the error bars are displayed.</span></span>
+      指定是否显示误差线。
 
-      <span data-ttu-id="bec36-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bec36-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
