--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartmapoptionsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartmapoptionsupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsUpdateData:interface'
-    summary: '<span data-ttu-id="8bbc3-101">一个用于更新 ChartMapOptions 对象上的数据的接口，可用于`chartMapOptions.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8bbc3-101">An interface for updating data on the ChartMapOptions object, for use in `chartMapOptions.set({ ... })`</span></span><!-- --><span data-ttu-id="8bbc3-102">.</span><span class="sxs-lookup"><span data-stu-id="8bbc3-102"></span></span>'
+    summary: '一个用于更新 ChartMapOptions 对象上的数据的接口，可用于`chartMapOptions.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartMapOptionsUpdateData
     fullName: Excel.Interfaces.ChartMapOptionsUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ChartMapOptionsUpdateData#projectionType:member'
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsUpdateData#labelStrategy:member'
     summary: |-
-      <span data-ttu-id="8bbc3-103">返回或设置区域地图图表的系列地图标签策略。</span><span class="sxs-lookup"><span data-stu-id="8bbc3-103">Returns or sets the series map labels strategy of a region map chart.</span></span> <span data-ttu-id="8bbc3-104">读/写。</span><span class="sxs-lookup"><span data-stu-id="8bbc3-104">Read/Write.</span></span>
+      指定区域地图图表的系列地图标签策略。
 
-      <span data-ttu-id="8bbc3-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bbc3-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: labelStrategy
     fullName: labelStrategy
     langs:
@@ -29,9 +29,9 @@ items:
           - 'excel!Excel.Interfaces.ChartMapOptionsUpdateData#labelStrategy~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsUpdateData#level:member'
     summary: |-
-      <span data-ttu-id="8bbc3-106">返回或设置区域地图图表的系列映射级别。</span><span class="sxs-lookup"><span data-stu-id="8bbc3-106">Returns or sets the series mapping level of a region map chart.</span></span> <span data-ttu-id="8bbc3-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="8bbc3-107">Read/Write.</span></span>
+      指定区域映射图表的系列映射级别。
 
-      <span data-ttu-id="8bbc3-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bbc3-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: level
     fullName: level
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartMapOptionsUpdateData#level~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsUpdateData#projectionType:member'
     summary: |-
-      <span data-ttu-id="8bbc3-109">返回或设置区域地图图表的系列投影类型。</span><span class="sxs-lookup"><span data-stu-id="8bbc3-109">Returns or sets the series projection type of a region map chart.</span></span> <span data-ttu-id="8bbc3-110">读/写。</span><span class="sxs-lookup"><span data-stu-id="8bbc3-110">Read/Write.</span></span>
+      指定区域地图图表的系列投影类型。
 
-      <span data-ttu-id="8bbc3-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bbc3-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: projectionType
     fullName: projectionType
     langs:
