--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartplotareaformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartplotareaformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="41498-101">表示图表 plotArea 的格式属性。</span><span class="sxs-lookup"><span data-stu-id="41498-101">Represents the format properties for chart plotArea.</span></span>
+      表示图表 plotArea 的格式属性。
 
-      <span data-ttu-id="41498-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41498-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
     fullName: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#border:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="41498-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="41498-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="41498-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="41498-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="41498-105">).</span><span class="sxs-lookup"><span data-stu-id="41498-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions#border:member'
     summary: |-
-      <span data-ttu-id="41498-106">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="41498-106">Represents the border attributes of a chart plotArea.</span></span>
+      指定图表 plotArea 的边框属性。
 
-      <span data-ttu-id="41498-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41498-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
