--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.datapivothierarchyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.datapivothierarchyloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="cc0ab-101">表示 Excel DataPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-101">Represents the Excel DataPivotHierarchy.</span></span>
+      表示 Excel DataPivotHierarchy。
 
-      <span data-ttu-id="cc0ab-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.DataPivotHierarchyLoadOptions
     fullName: Excel.Interfaces.DataPivotHierarchyLoadOptions
     langs:
@@ -21,7 +21,7 @@ items:
       - 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#showAs:member'
       - 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#summarizeBy:member'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#$all:member'
-    summary: '<span data-ttu-id="cc0ab-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="cc0ab-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="cc0ab-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="cc0ab-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="cc0ab-105">).</span><span class="sxs-lookup"><span data-stu-id="cc0ab-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -34,9 +34,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#field:member'
     summary: |-
-      <span data-ttu-id="cc0ab-106">返回与 DataPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-106">Returns the PivotFields associated with the DataPivotHierarchy.</span></span>
+      返回与 DataPivotHierarchy 相关联的 PivotFields。
 
-      <span data-ttu-id="cc0ab-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: field
     fullName: field
     langs:
@@ -49,9 +49,9 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="cc0ab-108">DataPivotHierarchy ID。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-108">Id of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy ID。
 
-      <span data-ttu-id="cc0ab-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -64,9 +64,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="cc0ab-110">DataPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-110">Name of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的名称。
 
-      <span data-ttu-id="cc0ab-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -79,9 +79,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#numberFormat:member'
     summary: |-
-      <span data-ttu-id="cc0ab-112">DataPivotHierarchy 的数字格式。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-112">Number format of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的数字格式。
 
-      <span data-ttu-id="cc0ab-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -94,9 +94,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="cc0ab-114">DataPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-114">Position of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的位置。
 
-      <span data-ttu-id="cc0ab-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -109,9 +109,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#showAs:member'
     summary: |-
-      <span data-ttu-id="cc0ab-116">确定数据是否应显示为特定计算汇总。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-116">Determines whether the data should be shown as a specific summary calculation or not.</span></span>
+      指定是否应将数据显示为特定的汇总计算。
 
-      <span data-ttu-id="cc0ab-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAs
     fullName: showAs
     langs:
@@ -124,9 +124,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyLoadOptions#summarizeBy:member'
     summary: |-
-      <span data-ttu-id="cc0ab-118">确定是否显示 DataPivotHierarchy 的所有项。</span><span class="sxs-lookup"><span data-stu-id="cc0ab-118">Determines whether to show all items of the DataPivotHierarchy.</span></span>
+      指定是否显示 DataPivotHierarchy 的所有项目。
 
-      <span data-ttu-id="cc0ab-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc0ab-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: summarizeBy
     fullName: summarizeBy
     langs:
