--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.shapefilldata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.shapefilldata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeFillData:interface'
-    summary: <span data-ttu-id="0fdfe-101">描述通过调用返回的数据的接口`shapeFill.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="0fdfe-101">An interface describing the data returned by calling `shapeFill.toJSON()`</span></span><!-- --><span data-ttu-id="0fdfe-102">.</span><span class="sxs-lookup"><span data-stu-id="0fdfe-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`shapeFill.toJSON()`<!-- -->.
     name: Excel.Interfaces.ShapeFillData
     fullName: Excel.Interfaces.ShapeFillData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ShapeFillData#type:member'
   - uid: 'excel!Excel.Interfaces.ShapeFillData#foregroundColor:member'
     summary: |-
-      <span data-ttu-id="0fdfe-103">代表形状填充的前景色，格式\#RRGGBB （例如 "FFA500"）或命名的 html 颜色（例如 "橙色"）的 html 颜色格式。</span><span class="sxs-lookup"><span data-stu-id="0fdfe-103">Represents the shape fill foreground color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      代表形状填充前景色的格式为\#RRGGBB （例如，"FFA500"）或命名的 html 颜色（例如，"橙色"）的 html 颜色格式（如 ""）或命名的 html 颜色（例如 "橙色"）
 
-      <span data-ttu-id="0fdfe-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fdfe-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: foregroundColor
     fullName: foregroundColor
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeFillData#transparency:member'
     summary: |-
-      <span data-ttu-id="0fdfe-105">返回或设置填充的透明度百分比，取值范围为 0.0（不透明）到 1.0（清晰）之间。</span><span class="sxs-lookup"><span data-stu-id="0fdfe-105">Returns or sets the transparency percentage of the fill as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="0fdfe-106">如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。</span><span class="sxs-lookup"><span data-stu-id="0fdfe-106">Returns null if the shape type does not support transparency or the shape fill has inconsistent transparency, such as with a gradient fill type.</span></span>
+      将填充的透明度百分比指定为0.0 （不透明）到1.0 （清除）中的值。 如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。
 
-      <span data-ttu-id="0fdfe-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fdfe-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: transparency
     fullName: transparency
     langs:
@@ -44,9 +44,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeFillData#type:member'
     summary: |-
-      <span data-ttu-id="0fdfe-108">返回形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="0fdfe-108">Returns the fill type of the shape.</span></span> <span data-ttu-id="0fdfe-109">只读。</span><span class="sxs-lookup"><span data-stu-id="0fdfe-109">Read-only.</span></span> <span data-ttu-id="0fdfe-110">有关详细信息，请参阅 Excel.ShapeFillType。</span><span class="sxs-lookup"><span data-stu-id="0fdfe-110">See Excel.ShapeFillType for details.</span></span>
+      返回形状的填充类型。 有关详细信息，请参阅 Excel.ShapeFillType。
 
-      <span data-ttu-id="0fdfe-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fdfe-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
