--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablecolumncollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablecolumncollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="72e14-101">表示属于表的所有列的集合。</span><span class="sxs-lookup"><span data-stu-id="72e14-101">Represents a collection of all the columns that are part of the table.</span></span>
+      表示属于表的所有列的集合。
 
-      <span data-ttu-id="72e14-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72e14-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableColumnCollectionLoadOptions
     fullName: Excel.Interfaces.TableColumnCollectionLoadOptions
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#name:member'
       - 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#values:member'
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="72e14-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="72e14-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="72e14-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="72e14-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="72e14-105">).</span><span class="sxs-lookup"><span data-stu-id="72e14-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#filter:member'
     summary: |-
-      <span data-ttu-id="72e14-106">对于集合中的每一项：检索应用于列的筛选器。</span><span class="sxs-lookup"><span data-stu-id="72e14-106">For EACH ITEM in the collection: Retrieve the filter applied to the column.</span></span>
+      对于集合中的每一项：检索应用于列的筛选器。
 
-      <span data-ttu-id="72e14-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72e14-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filter
     fullName: filter
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.FilterLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="72e14-108">对于集合中的每一项：返回标识表中的列的唯一键。</span><span class="sxs-lookup"><span data-stu-id="72e14-108">For EACH ITEM in the collection: Returns a unique key that identifies the column within the table.</span></span> <span data-ttu-id="72e14-109">只读。</span><span class="sxs-lookup"><span data-stu-id="72e14-109">Read-only.</span></span>
+      对于集合中的每一项：返回标识表中的列的唯一键。
 
-      <span data-ttu-id="72e14-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72e14-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="72e14-111">对于集合中的每一项：返回表的列集合中的列的索引号。</span><span class="sxs-lookup"><span data-stu-id="72e14-111">For EACH ITEM in the collection: Returns the index number of the column within the columns collection of the table.</span></span> <span data-ttu-id="72e14-112">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="72e14-112">Zero-indexed.</span></span> <span data-ttu-id="72e14-113">只读。</span><span class="sxs-lookup"><span data-stu-id="72e14-113">Read-only.</span></span>
+      对于集合中的每一项：返回表的列集合中的列的索引号。 从零开始编制索引。
 
-      <span data-ttu-id="72e14-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72e14-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="72e14-115">对于集合中的每个项目：代表表格列的名称。</span><span class="sxs-lookup"><span data-stu-id="72e14-115">For EACH ITEM in the collection: Represents the name of the table column.</span></span>
+      对于集合中的每个项目：指定表格列的名称。
 
-      <span data-ttu-id="72e14-116">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="72e14-116">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="72e14-117">\]</span><span class="sxs-lookup"><span data-stu-id="72e14-117"></span></span>
+      \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: name
     fullName: name
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions#values:member'
     summary: |-
-      <span data-ttu-id="72e14-118">对于集合中的每一项：代表指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="72e14-118">For EACH ITEM in the collection: Represents the raw values of the specified range.</span></span> <span data-ttu-id="72e14-119">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="72e14-119">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="72e14-120">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="72e14-120">Cells that contain an error will return the error string.</span></span>
+      对于集合中的每一项：代表指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="72e14-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72e14-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
