--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartpointscollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartpointscollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="fae6b-101">图表中某个系列的所有图表点的集合。</span><span class="sxs-lookup"><span data-stu-id="fae6b-101">A collection of all the chart points within a series inside a chart.</span></span>
+      图表中某个系列的所有图表点的集合。
 
-      <span data-ttu-id="fae6b-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fae6b-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartPointsCollectionLoadOptions
     fullName: Excel.Interfaces.ChartPointsCollectionLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions#format:member'
       - 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions#value:member'
   - uid: 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="fae6b-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="fae6b-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="fae6b-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="fae6b-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="fae6b-105">).</span><span class="sxs-lookup"><span data-stu-id="fae6b-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="fae6b-106">对于集合中的每一项：封装格式属性图表点。</span><span class="sxs-lookup"><span data-stu-id="fae6b-106">For EACH ITEM in the collection: Encapsulates the format properties chart point.</span></span>
+      对于集合中的每一项：封装格式属性图表点。
 
-      <span data-ttu-id="fae6b-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fae6b-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPointFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="fae6b-108">对于集合中的每一项：返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="fae6b-108">For EACH ITEM in the collection: Returns the value of a chart point.</span></span> <span data-ttu-id="fae6b-109">只读。</span><span class="sxs-lookup"><span data-stu-id="fae6b-109">Read-only.</span></span>
+      对于集合中的每一项：返回图表点的值。
 
-      <span data-ttu-id="fae6b-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fae6b-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
