--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.nameditemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.nameditemloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="c5cca-101">表示单元格区域或值的定义名称。</span><span class="sxs-lookup"><span data-stu-id="c5cca-101">Represents a defined name for a range of cells or value.</span></span> <span data-ttu-id="c5cca-102">名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。</span><span class="sxs-lookup"><span data-stu-id="c5cca-102">Names can be primitive named objects (as seen in the type below), range object, or a reference to a range.</span></span> <span data-ttu-id="c5cca-103">此对象可用于获取与名称相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="c5cca-103">This object can be used to obtain range object associated with names.</span></span>
+      表示单元格区域或值的定义名称。 名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。 此对象可用于获取与名称相关的 range 对象。
 
-      <span data-ttu-id="c5cca-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.NamedItemLoadOptions
     fullName: Excel.Interfaces.NamedItemLoadOptions
     langs:
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheet:member'
       - 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheetOrNullObject:member'
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#$all:member'
-    summary: '<span data-ttu-id="c5cca-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="c5cca-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="c5cca-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="c5cca-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="c5cca-107">).</span><span class="sxs-lookup"><span data-stu-id="c5cca-107"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -35,9 +35,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#comment:member'
     summary: |-
-      <span data-ttu-id="c5cca-108">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="c5cca-108">Represents the comment associated with this name.</span></span>
+      指定与此名称关联的注释。
 
-      <span data-ttu-id="c5cca-109">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-109">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
     fullName: comment
     langs:
@@ -50,9 +50,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="c5cca-110">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="c5cca-110">The name of the object.</span></span> <span data-ttu-id="c5cca-111">只读。</span><span class="sxs-lookup"><span data-stu-id="c5cca-111">Read-only.</span></span>
+      对象的名称。
 
-      <span data-ttu-id="c5cca-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -65,9 +65,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#scope:member'
     summary: |-
-      <span data-ttu-id="c5cca-113">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="c5cca-113">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="c5cca-114">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="c5cca-114">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="c5cca-115">只读。</span><span class="sxs-lookup"><span data-stu-id="c5cca-115">Read-only.</span></span>
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
-      <span data-ttu-id="c5cca-116">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-116">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
     fullName: scope
     langs:
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="c5cca-117">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="c5cca-117">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="c5cca-118">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="c5cca-118">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="c5cca-119">只读。</span><span class="sxs-lookup"><span data-stu-id="c5cca-119">Read-only.</span></span>
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      <span data-ttu-id="c5cca-120">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-120">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -95,9 +95,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="c5cca-121">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="c5cca-121">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="c5cca-122">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="c5cca-122">For a named range, will return the range address.</span></span> <span data-ttu-id="c5cca-123">只读。</span><span class="sxs-lookup"><span data-stu-id="c5cca-123">Read-only.</span></span>
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
-      <span data-ttu-id="c5cca-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -110,9 +110,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="c5cca-125">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="c5cca-125">Specifies whether the object is visible or not.</span></span>
+      指定对象是否可见。
 
-      <span data-ttu-id="c5cca-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -125,9 +125,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="c5cca-127">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="c5cca-127">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="c5cca-128">如果项目的作用域改为工作簿，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="c5cca-128">Throws an error if the item is scoped to the workbook instead.</span></span>
+      返回已命名项限定到的工作表。 如果项目的作用域改为工作簿，则会引发错误。
 
-      <span data-ttu-id="c5cca-129">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-129">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
@@ -140,9 +140,9 @@ items:
           - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheetOrNullObject:member'
     summary: |-
-      <span data-ttu-id="c5cca-130">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="c5cca-130">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="c5cca-131">如果项改为限定到工作簿，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="c5cca-131">Returns a null object if the item is scoped to the workbook instead.</span></span>
+      返回已命名项限定到的工作表。 如果项改为限定到工作簿，将返回 NULL 对象。
 
-      <span data-ttu-id="c5cca-132">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5cca-132">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetOrNullObject
     fullName: worksheetOrNullObject
     langs:
